# playlist-manager

./: .gitignore  README.md  check.sh  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci-build.yaml
deezer/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
deezer/management/commands/: import.py
deezer/migrations/: 0001_initial.py
deezer/templates/deezer/: duplicates.html  header.html  index.html  login.html  playlists.html
playlist_manager/: settings.py  urls.py
