[tool.poetry]
name = "playlist-manager"
version = "0.1.0"
description = ""
authors = ["Daniel Brown <djbrown@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "playlist_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
mypy = "^1.3.0"
djlint = "^1.32.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
