[tool.poetry]
name = "playlist-manager"
version = "0.1.0"
description = ""
authors = ["Daniel Brown <djbrown@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
mypy = "^1.3.0"
djlint = "^1.32.1"
pylint-django = "^2.5.3"
django-stubs = "^4.2.3"
types-requests = "^2.31.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
disable = """
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
"""
ignore = ["manage.py"]
ignore-paths = [".*/migrations"]
load-plugins = "pylint_django"

[tool.pyright]
reportMissingModuleSource = false

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "playlist_manager.settings"
